--- a/templates/base.html
+++ b/templates/base.html
@@ -62,15 +62,40 @@
 	</nav>
 	<!-- The social media icon bar on RHS -->
 	<div class="row">
-		<aside id="lhs-aside" class="column">
-			<nav>
-				<div class="icon-bar" style="width:60px;">
+		<aside id="lhs-aside" class="column ">
+			<nav class="icon-bar">
+                <ul >
+                    <li class="facebook">
+                        <a href="#" >Facebook<i class="fa fa-facebook"></i></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="twitter">
+                        <a href="#" >Twitter<i class="fa fa-twitter"></i></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="google">
+                        <a href="#" >Google<i class="fa fa-google"></i></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="linkedin">
+                        <a href="#" >Linkedin<i class="fa fa-linkedin"></i></a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="youtube">
+                        <a href="#" >YouTube<i class="fa fa-youtube"></i></a>
+                    </li>
+                </ul>
+				<!--<div class="icon-bar" style="width:60px;">
 					<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
 					<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
 					<a href="#" class="google"><i class="fa fa-google"></i></a>
 					<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
 					<a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-				</div>
+				</div>-->
 			</nav>
 		</aside>
 		<!--Adverts bar on LHS-->
