--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,6 +50,19 @@ div.card {
                               displayed */
     -webkit-box-orient: vertical;
 }
+
+div.card-text{
+    white-space: nowrap; 
+   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+    line-height: 16px;    
+    max-height: 210px;     
+    -webkit-line-clamp: 2; /* Write the number of 
+                              lines you want to be 
+                              displayed */
+    -webkit-box-orient: vertical; 
+}
 #blog-body-limit{
     max-height: 200px;
 }
