--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -14,7 +14,7 @@
     <div class="col-md-8">
       <div class="card-body h-100"id="blog-body-limit">
       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
-        <p class="card-text" >{{ blog.body | safe }}</p>
+        <p class="card-text" >{{ blog.body | safe |truncate(200,True) }}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
       </div>
@@ -28,7 +28,7 @@
     <div class="col-md-8">
       <div class="card-body"id="blog-body-limit">
        <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
-        <p class="card-text">{{ blog.body | safe}}</p>
+        <p class="card-text">{{ blog.body | safe|truncate(200,True)}}</p>
         <p class="card-text">{{ blog.user_name }}</p>
         <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
       </div>
