--- a/templates/base.html
+++ b/templates/base.html
@@ -66,27 +66,27 @@
 			<nav class="icon-bar">
                 <ul >
                     <li class="facebook">
-                        <a href="#" >Facebook<i class="fa fa-facebook"></i></a>
+                        <a href="www.facebook.com" >Facebook<i class="fa fa-facebook"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="twitter">
-                        <a href="#" >Twitter<i class="fa fa-twitter"></i></a>
+                        <a href="www.twitter.com" >Twitter<i class="fa fa-twitter"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="google">
-                        <a href="#" >Google<i class="fa fa-google"></i></a>
+                        <a href="www.google.co.uk" >Google<i class="fa fa-google"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="linkedin">
-                        <a href="#" >Linkedin<i class="fa fa-linkedin"></i></a>
+                        <a href="https://ie.linkedin.com/" >Linkedin<i class="fa fa-linkedin"></i></a>
                     </li>
                 </ul>
                 <ul>
                     <li class="youtube">
-                        <a href="#" >YouTube<i class="fa fa-youtube"></i></a>
+                        <a href="www.youtube.com" >YouTube<i class="fa fa-youtube"></i></a>
                     </li>
                 </ul>
 			</nav>
