--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,24 @@ html,body {
     color:#000;
 }
 @media screen and (max-width: 1000px) {
+ .h2, h2{
+    width:80%;
+    text-align: center;
+    padding: 0 0 0 2px;
+    margin: auto;
+ }
+ form#users-signup.signup{
+     margin: auto;
+     padding: 0 0 0 2px;
+     width:80%;
+ }
+  form#users-login.login{
+     margin: auto;
+     padding: 0 0 0 2px;
+     width:80%;
+ }
+}
+@media screen and (max-width: 1000px) {
   #lhs-aside{
       display:none;
   }
@@ -38,6 +56,12 @@ html,body {
     div #section-center.column{
       width:80%;
   }
+   .h2, h2{
+    width:80%;
+    text-align: center;
+    padding: 0 0 0 2px;
+    margin: auto;
+ }
  
 
 }
