--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-html,body {
+html, body {
     width: 100%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -11,7 +11,8 @@ html,body {
     padding: 0 0 0 2px;
     margin: auto;
  }
- form#users-signup.signup,form#users-login.login,form#add_blog.add_blog{
+ form#users-signup.signup,form#users-login.login,
+ form#add_blog.add_blog,form#edit_blog.edit_blog{
      margin: auto;
      padding: 0 0 0 2px;
      width:80%;
@@ -22,10 +23,12 @@ html,body {
    }
 
 }
+
 @media screen and (max-width: 1000px) {
    div.row{
-       width:90%;
+       width:100%;
        margin: 0 0 0 0;
+       padding-left: 20%;
    }
   #lhs-aside{
       display:none;
@@ -36,19 +39,27 @@ html,body {
   img.card-img{
       display: none;
   }
-  div #section-center.column{
+  section #section-center.column{
+      width:100%;
+      margin: 0 0 0 200px;
+  }
+  div.column{
       width:100%;
   }
   .crop-text2{
       display: none;
   }
+  
  
 }
 
 @media screen and (min-width: 1000px) {
+     body{
+        font-size: 100%;
+   }
  
-  div #section-center.column{
-      width:100%;
+  section #section-center.column{
+      width:90%;
   }
   .crop-text2{
       display: none;
@@ -63,14 +74,21 @@ html,body {
    img#img_src.card-img{
        margin-left: 30%;
    }
+   
 }
 @media screen and (min-width: 1200px) {
-      aside #rhs-aside.column{
-      width: 10%;
-  }
+      
+  
     div #section-center.column{
       width:80%;
   }
+    div.column{
+        width:90%;
+    }
+    div.row{
+    width:90%;
+    }
+
    .h2, h2{
     width:80%;
     text-align: center;
@@ -79,6 +97,63 @@ html,body {
  }
  
 
+}
+@media screen and (min-width: 300px) {
+    div.row{
+       width:100%;
+       padding-left: 1px;
+      
+   }
+   html,body{
+        font-size: 0.8rem;
+   }
+
+   div#blogs.card.mb-3{
+       padding-bottom: 10px;
+   }
+   div.card-body{
+       margin: 0 0 10px 0;
+       padding-bottom: 50px;
+   }
+   
+}
+@media screen and (min-width: 700px) {
+    div.row{
+       width:100%;
+       padding-left: 1px;
+      
+   }
+   html,body{
+        font-size: 0.8rem;
+   }
+
+   div#blogs.card.mb-3{
+       padding-bottom: 10px;
+   }
+   div.card-body{
+       margin: 0 0 10px 0;
+       padding-bottom: 50px;
+   }
+   
+}
+@media screen and (min-width: 768px) {
+
+   
+}@media screen and (min-width: 1000px) {
+
+    html,body{
+        font-size: 1rem;
+   }
+}
+@media screen and (min-width: 1800px) {
+
+   html,body{
+        font-size: 1.2rem;
+   }
+   
+}
+hr{
+    width:80%;
 }
 
 
@@ -100,8 +175,8 @@ h1{
 #lhs-aside{
     background-color: #f1f3f4;
     float: left;
-    width: 20%;
-    padding: 15px;
+    width: 16%;
+  
 }
 section #section-center{
     float: left;
@@ -113,8 +188,7 @@ section #section-center{
 aside #rhs-aside.column{
     background-color: o#f1f3f4;
     float: left;
-    width: 20%;
-    padding: 15px;
+   
 }
 #hero-welcome{
     text-align: center;
