--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
 	<header class="header">
 		<h1 class="header-title">The Daily Blog</h1>
 	</header>
-	<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
 		<a class="navbar-brand" href="{{url_for('index')}}">DCBlog</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -104,9 +104,6 @@
 
 
 		<aside id="rhs-aside" class="column">
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ea obcaecati porro unde reprehenderit autem
-				quibusdam repellat quod quia, laudantium illo veniam doloremque sapiente in debitis ut cum eum
-				cupiditate?</p>
 		</aside>
 
 	</div>
