--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -6,7 +6,7 @@
       
     {% if loop.index % 2 != 0 %}
   
-<div class="card mb-3 " style="max-width:1000px;height: 15rem;">
+<div class="card mb-3" id="blogs" style="max-width:1000px;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="{{ blog.img_src }}" class="card-img" alt="...">
